--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -358,18 +358,18 @@
     <iframe class="status" src="static/F1877Msta.html" width="100%" style="border:none;"></iframe>
   </div>
   <div class="rounds">
-    <img class="maps" src="static/Standard (6 Players)-F1877B.png" style="width:100%">
+    <img class="maps" src="static/Standard (6 Players)-F1877Ba.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1877 adjustments</div>
-    <div class="results"><h3 class="w3-display-middle">Deadline for issuing build/remove orders is Monday 29th March at 1500 GMT. Affects France (-2) and Turkey (+3).</h3></div>
-    <!--iframe class="results" src="static/F1877Ares.html" width="100%" style="border:none;"></iframe-->
+    <!--div class="results"><h3 class="w3-display-middle">Deadline for issuing build/remove orders is Monday 29th March at 1500 GMT. Affects France (-2) and Turkey (+3).</h3></div-->
+    <iframe class="results" src="static/F1877Ares.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/F1877Asta.html" width="100%" style="border:none;"></iframe>
   </div>
-  <!--div class="rounds">
-    <img class="maps" src="static/Standard (6 Players)-S1877M.png" style="width:100%">
-    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1877 starting position</div>
-    <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Saturday 27th March at 1200 GMT.</h3></div>
-    <iframe class="status" src="static/S1877Dsta.html" width="100%" style="border:none;"></iframe>
-  </div-->
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-S1878M.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1878 starting position</div>
+    <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Wednesday 31st March at 1200 GMT.</h3></div>
+    <iframe class="status" src="static/S1878Dsta.html" width="100%" style="border:none;"></iframe>
+  </div>
 
   <button class="earlier w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="later w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
