--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -307,12 +307,14 @@
     <iframe class="results" src="static/S1876Rres.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/S1876Rsta.html" width="100%" style="border:none;"></iframe>
   </div>
+<!--
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-F1876M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1876 starting position</div>
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Tuesday 23rd March at 1200 GMT.</h3></div>
     <iframe class="status" src="static/F1876Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+-->
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-F1876Ma.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1876 movement orders</div>
@@ -333,12 +335,14 @@
     <iframe class="results" src="static/F1876Ares.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/F1876Asta.html" width="100%" style="border:none;"></iframe>
   </div>
+<!--
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-S1877M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1877 starting position</div>
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Saturday 27th March at 1200 GMT.</h3></div>
     <iframe class="status" src="static/S1877Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+-->
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-S1877Ma.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1877 movement orders</div>
@@ -369,6 +373,18 @@
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1878 starting position</div>
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Wednesday 31st March at 1200 GMT.</h3></div>
     <iframe class="status" src="static/S1878Dsta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-S1878Ma.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1878 movement orders</div>
+    <iframe class="results" src="static/S1878Mres.html" width="100%" style="border:none;"></iframe>
+    <iframe class="status" src="static/S1878Msta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1878M.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1878 starting position</div>
+    <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Friday 2nd April at 1200 GMT.</h3></div>
+    <iframe class="status" src="static/F1878Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
 
   <button class="earlier w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
