--- a/diplomacy/static/supply centre history.html
+++ b/diplomacy/static/supply centre history.html
@@ -44,10 +44,16 @@
           <td bgcolor="#E6EEF0">
             <b>1877</b>
           </td>
+          <td bgcolor="#E6EEF0">
+            <b>1878</b>
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>ank</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -108,6 +114,9 @@
           <td>
             F
           </td>
+          <td>
+            F
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -140,10 +149,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>bre</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -204,6 +219,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -236,10 +254,16 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>con</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -300,10 +324,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>edi</b>
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -364,6 +394,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -389,6 +422,9 @@
           </td>
           <td>
             F
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -428,10 +464,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>lon</b>
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -492,10 +534,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>mar</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -556,6 +604,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -588,6 +639,9 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -604,6 +658,9 @@
           </td>
           <td>
             I
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -652,10 +709,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>par</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -716,6 +779,9 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -748,6 +814,9 @@
           <td>
             F
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -767,6 +836,9 @@
           </td>
           <td>
             R
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -812,6 +884,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -844,10 +919,16 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>smy</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -908,6 +989,9 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -940,6 +1024,9 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -959,6 +1046,9 @@
           </td>
           <td>
             R
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -1004,6 +1094,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -1017,6 +1110,9 @@
           </td>
           <td>
             
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -1068,6 +1164,9 @@
           <td>
             F
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -1093,6 +1192,9 @@
           </td>
           <td>
             R
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -1131,6 +1233,9 @@
           </td>
           <td>
             F
+          </td>
+          <td>
+            T
           </td>
         </tr>
       </table>
@@ -1428,6 +1533,35 @@
           </td>
           <td>
             59
+          </td>
+        </tr>
+        <tr>
+          <td bgcolor="#E6EEF0">
+            <b>1878</b>
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            13
+          </td>
+          <td>
+            4
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            17
+          </td>
+          <td>
+            67
           </td>
         </tr>
       </table>
