--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -370,12 +370,14 @@
     <iframe class="results" src="static/F1877Ares.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/F1877Asta.html" width="100%" style="border:none;"></iframe>
   </div>
+<!--
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-S1878M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1878 starting position</div>
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Wednesday 31st March at 1200 GMT.</h3></div>
     <iframe class="status" src="static/S1878Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+-->
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-S1878Ma.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1878 movement orders</div>
@@ -395,20 +397,18 @@
     <iframe class="status" src="static/F1878Msta.html" width="100%" style="border:none;"></iframe>
   </div>
   <div class="rounds">
-    <img class="maps" src="static/Standard (6 Players)-F1878B.png" style="width:100%">
+    <img class="maps" src="static/Standard (6 Players)-F1878Ba.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1878 adjustments</div>
-    <div class="results"><h3 class="w3-display-middle">Deadline for issuing build/remove orders is Friday 2nd April at 1500 GMT. Affects England (+3), France (-3) and Turkey (-1).</h3></div>
-    <!--iframe class="results" src="static/F1878Ares.html" width="100%" style="border:none;"></iframe-->
+    <!--div class="results"><h3 class="w3-display-middle">Deadline for issuing build/remove orders is Friday 2nd April at 1500 GMT. Affects England (+3), France (-3) and Turkey (-1).</h3></div-->
+    <iframe class="results" src="static/F1878Ares.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/F1878Asta.html" width="100%" style="border:none;"></iframe>
   </div>
-<!--
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-S1879M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1879 starting position</div>
-    <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Wednesday 31st March at 1200 GMT.</h3></div>
+    <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Sunday 4th April at 1200 GMT.</h3></div>
     <iframe class="status" src="static/S1879Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
--->
 
   <button class="earlier w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="later w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
