--- a/diplomacy/static/supply centre history.html
+++ b/diplomacy/static/supply centre history.html
@@ -47,10 +47,16 @@
           <td bgcolor="#E6EEF0">
             <b>1878</b>
           </td>
+          <td bgcolor="#E6EEF0">
+            <b>1879</b>
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>ank</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -117,6 +123,9 @@
           <td>
             F
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -133,6 +142,9 @@
           </td>
           <td>
             G
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -187,6 +199,9 @@
           <td>
             F
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -212,6 +227,9 @@
           </td>
           <td>
             A
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -257,10 +275,16 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>con</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -327,10 +351,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>edi</b>
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -397,6 +427,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -422,6 +455,9 @@
           </td>
           <td>
             F
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -467,10 +503,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>lon</b>
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -537,10 +579,16 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
             <b>mar</b>
+          </td>
+          <td>
+            F
           </td>
           <td>
             F
@@ -607,6 +655,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -632,6 +683,9 @@
           </td>
           <td>
             F
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -677,6 +731,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -687,6 +744,9 @@
           </td>
           <td>
             
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -747,6 +807,9 @@
           <td>
             F
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -772,6 +835,9 @@
           </td>
           <td>
             F
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -817,6 +883,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -836,6 +905,9 @@
           </td>
           <td>
             R
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -887,6 +959,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -922,10 +997,16 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
             <b>smy</b>
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -992,6 +1073,9 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr bgcolor="#E6EEF0">
           <td bgcolor="#E6EEF0">
@@ -1027,6 +1111,9 @@
           <td>
             E
           </td>
+          <td>
+            E
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -1046,6 +1133,9 @@
           </td>
           <td>
             R
+          </td>
+          <td>
+            E
           </td>
           <td>
             E
@@ -1097,6 +1187,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -1131,6 +1224,9 @@
           </td>
           <td>
             T
+          </td>
+          <td>
+            E
           </td>
         </tr>
         <tr bgcolor="#E6EEF0">
@@ -1167,6 +1263,9 @@
           <td>
             T
           </td>
+          <td>
+            T
+          </td>
         </tr>
         <tr>
           <td bgcolor="#E6EEF0">
@@ -1192,6 +1291,9 @@
           </td>
           <td>
             R
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -1233,6 +1335,9 @@
           </td>
           <td>
             F
+          </td>
+          <td>
+            T
           </td>
           <td>
             T
@@ -1562,6 +1667,35 @@
           </td>
           <td>
             67
+          </td>
+        </tr>
+        <tr>
+          <td bgcolor="#E6EEF0">
+            <b>1879</b>
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            17
+          </td>
+          <td>
+            1
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            &#160;
+          </td>
+          <td>
+            16
+          </td>
+          <td>
+            78
           </td>
         </tr>
       </table>
