--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -421,6 +421,34 @@
     <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Easter Sunday or Monday.</h3></div>
     <iframe class="status" src="static/F1879Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1879Ma.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1879 movement orders</div>
+    <iframe class="results" src="static/F1879Mres.html" width="100%" style="border:none;"></iframe>
+    <iframe class="status" src="static/F1879Msta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1879R.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1879 retreats</div>
+    <div class="results"><h3 class="w3-display-middle">English fleet displaced from Gulf of Lyon to give a retreat or disband order as soon as possible. Adjustment phase will then follow.</h3></div>
+    <!--iframe class="results" src="static/F1879Rres.html" width="100%" style="border:none;"></iframe-->
+    <iframe class="status" src="static/F1879Rsta.html" width="100%" style="border:none;"></iframe>
+  </div>
+    <!--div class="results"><h3 class="w3-display-middle">Deadline for issuing build/remove orders is Tuesday 23rd March at 1800 GMT. Affects England (+3), France (-2), Russia (-1) and Turkey (+3).</h3></div-->
+<!--
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-F1879Ba.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1879 adjustments</div>
+    <iframe class="results" src="static/F1879Ares.html" width="100%" style="border:none;"></iframe>
+    <iframe class="status" src="static/F1879Asta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <img class="maps" src="static/Standard (6 Players)-S1877M.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1877 starting position</div>
+    <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Saturday 27th March at 1200 GMT.</h3></div>
+    <iframe class="status" src="static/S1877Dsta.html" width="100%" style="border:none;"></iframe>
+  </div>
+-->
 
   <button class="earlier w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="later w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
