--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -428,20 +428,20 @@
     <iframe class="status" src="static/F1879Msta.html" width="100%" style="border:none;"></iframe>
   </div>
   <div class="rounds">
-    <img class="maps" src="static/Standard (6 Players)-F1879R.png" style="width:100%">
+    <img class="maps" src="static/Standard (6 Players)-F1879Ra.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1879 retreats</div>
-    <div class="results"><h3 class="w3-display-middle">English fleet displaced from Gulf of Lyon to give a retreat or disband order as soon as possible. Adjustment phase will then follow.</h3></div>
-    <!--iframe class="results" src="static/F1879Rres.html" width="100%" style="border:none;"></iframe-->
+    <!--div class="results"><h3 class="w3-display-middle">English fleet displaced from Gulf of Lyon to give a retreat or disband order as soon as possible. Adjustment phase will then follow.</h3></div-->
+    <iframe class="results" src="static/F1879Rres.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/F1879Rsta.html" width="100%" style="border:none;"></iframe>
   </div>
-    <!--div class="results"><h3 class="w3-display-middle">Deadline for issuing build/remove orders is Tuesday 23rd March at 1800 GMT. Affects England (+3), France (-2), Russia (-1) and Turkey (+3).</h3></div-->
-<!--
   <div class="rounds">
-    <img class="maps" src="static/Standard (6 Players)-F1879Ba.png" style="width:100%">
+    <img class="maps" src="static/Standard (6 Players)-F1879B.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1879 adjustments</div>
-    <iframe class="results" src="static/F1879Ares.html" width="100%" style="border:none;"></iframe>
+    <div class="results"><h3 class="w3-display-middle">Building orders. Affects England (+3) and Turkey (+1).</h3></div>
+    <!--iframe class="results" src="static/F1879Ares.html" width="100%" style="border:none;"></iframe-->
     <iframe class="status" src="static/F1879Asta.html" width="100%" style="border:none;"></iframe>
   </div>
+<!--
   <div class="rounds">
     <img class="maps" src="static/Standard (6 Players)-S1877M.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1877 starting position</div>
