--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -435,20 +435,18 @@
     <iframe class="status" src="static/F1879Rsta.html" width="100%" style="border:none;"></iframe>
   </div>
   <div class="rounds">
-    <img class="maps" src="static/Standard (6 Players)-F1879B.png" style="width:100%">
+    <img class="maps" src="static/Standard (6 Players)-F1879Ba.png" style="width:100%">
     <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Fall 1879 adjustments</div>
-    <div class="results"><h3 class="w3-display-middle">Building orders. Affects England (+3) and Turkey (+1).</h3></div>
-    <!--iframe class="results" src="static/F1879Ares.html" width="100%" style="border:none;"></iframe-->
+    <!--div class="results"><h3 class="w3-display-middle">Building orders. Affects England (+3) and Turkey (+1).</h3></div-->
+    <iframe class="results" src="static/F1879Ares.html" width="100%" style="border:none;"></iframe>
     <iframe class="status" src="static/F1879Asta.html" width="100%" style="border:none;"></iframe>
   </div>
-<!--
   <div class="rounds">
-    <img class="maps" src="static/Standard (6 Players)-S1877M.png" style="width:100%">
-    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1877 starting position</div>
-    <div class="results"><h3 class="w3-display-middle">Deadline for issuing movement orders is Saturday 27th March at 1200 GMT.</h3></div>
-    <iframe class="status" src="static/S1877Dsta.html" width="100%" style="border:none;"></iframe>
+    <img class="maps" src="static/Standard (6 Players)-S1880M.png" style="width:100%">
+    <div class="maps w3-display-topleft w3-padding-small w3-large w3-container w3-black">Spring 1880 starting position</div>
+    <div class="results"><h3 class="w3-display-middle">England and Turkey to meet with other nations at Versailles to discuss reparations.</h3></div>
+    <iframe class="status" src="static/S1880Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
--->
 
   <button class="earlier w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="later w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
